DemoPolicy/allow_go_to_dbmaster.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-go-to-dbmaster
spec:
  podSelector:
    matchLabels:
      app: masterdb
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: go-app
