DemoPolicy/world-to-web.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: world-to-web
spec:
  endpointSelector: {}
  ingress:
    - fromEntities:
        - world
      toPorts:
        - ports:
            - port: "80"
